--- a/html.html
+++ b/html.html
@@ -8,7 +8,7 @@
        body{
         background-color: whitesmoke;
        }
-       h5{
+       h1{
             background-color:rgb(141, 139, 137);
             box-shadow:0px 5px 18px gray ;
             height: 60px;
@@ -27,6 +27,7 @@
     </style>
 </head>
 <body>
-    <h5>Hello World</h5>
+    <h1>Hello World</h1>
+    <h1>I am a header </h1>
 </body>
 </html>
