--- a/html.html
+++ b/html.html
@@ -24,11 +24,23 @@
             font-family: cursive;
 
         }
+        p{
+            color: burlywood;
+            background-color: brown;
+            padding: 12px ;
+            margin: 20px;
+        }
     </style>
 </head>
 <body>
     <h1>Hello World</h1>
     <h1>I am a header </h1>
     <p>I a paraghraph</p>
+    <p>Lorem ipsum dolor sit amet consectetur
+         adipisicing elit. Quod, harum delectus
+          eum eius totam esse ratione distinctio 
+          possimus cumque provident id repudiandae 
+          quibusdam saepe fuga laudantium corrupti quo,
+           obcaecati dignissimos.</p>
 </body>
 </html>
