--- a/html.html
+++ b/html.html
@@ -29,18 +29,31 @@
             background-color: brown;
             padding: 12px ;
             margin: 20px;
+            width: fit-content;
         }
     </style>
 </head>
-<body>
+<body><div>
     <h1>Hello World</h1>
     <h1>I am a header </h1>
-    <p>I a paraghraph</p>
+    <p>I am a paraghraph</p>
     <p>Lorem ipsum dolor sit amet consectetur
          adipisicing elit. Quod, harum delectus
           eum eius totam esse ratione distinctio 
           possimus cumque provident id repudiandae 
           quibusdam saepe fuga laudantium corrupti quo,
            obcaecati dignissimos.</p>
+    </div>
+      <h1>Hello I am header</h1>
+    <p>I am a paraghraph</p>
+    <p>Lorem ipsum dolor sit amet consectetur
+         adipisicing elit. Quod, harum delectus
+          eum eius totam esse ratione distinctio 
+          possimus cumque provident id repudiandae 
+          quibusdam saepe fuga laudantium corrupti quo,
+           obcaecati dignissimos.</p>
+    </div>
+
+
 </body>
 </html>
